# IT_course

./: db.sqlite3  package-lock.json  pyproject.toml
main/: settings.py  urls.py
students/: admin.py  models.py  serializers.py  views.py
students/migrations/: 0001_initial.py
